# nixosdotfiles

./: spacemacs.elisp  test.cabal
