name:                test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test

                     --| NOTE: Attempted to order by frequence of use

                     --| HTTP requests ============================
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , wreq
                     -- ===========================================

                     -- logging ===================================
                     , fast-logger
                     -- ===========================================

                     --| Exception handling =======================
                     , exceptions
                     , safe-exceptions
                     -- ===========================================

                     --| Dates ====================================
                     ----| General
                     , time
                     ----| Fuzzy date parsing 
                     -- TODO one based on git i used that was really good/small
                     -- ===========================================

                     --| Text Manipulation ========================
                     , text
                     , formatting
                     -- ===========================================

                     --| Parsing Data =============================
                     ----| JSON
                     , aeson
                     , lens-aeson
                     , scientific 
                     --| PDF
                     , HPDF
                     --| Excel (xlsx)
                     , xlsx
                     ----| CSV (xlsx)
                     , cassava
                     ----| Lexing
                     , bytestring-lexing
                     ----| General
                     , megaparsec
                     , attoparsec
                     , pipes-parse
                     , Earley
                     , trifecta
                     ----| HTML
                     , tagsoup
                     ----| XML
                     , hexml 
                     , hexml-lens
                     -- =========================================

                     --| Data structures/Containers =============
                     , vector
                     , containers
                     , unordered-containers
                     , hashtables
                     -- =========================================

                     --| Streaming ==============================
                     , pipes
                     , foldl
                     , pipes-text
                     , pipes-bytestring
                     , pipes-group
                     , conduit
                     -- =========================================

                     -- Control Flow ============================
                     , retry
                     -- =========================================

                     --| Concurrency ============================
                     , async
                     -- =========================================

                     --| Dataframe/Analysis =====================
                     , Frames
                     -- =========================================

                     --| Databases  =============================
                     ----| orm
                     , persistent
                     ----| mysql
                     , mysql-haskell
                     , mysql-simple
                     ----| postgres
                     , postgresql-simple
                     -- =========================================

                     -- Api's to services =======================
                     , github
                     , amazonka
                     , gogol-gmail
                     -- =========================================

                     --| Image manipulation =====================
                     , JuicyPixels
                     -- =========================================

                     --| Web Framework ==========================
                     ---- | Full
                     , yesod
                     , Spock
                     , MFlow
                     ---- | Minimal
                     , servant
                     , wai
                     -- =========================================


                     --| Unsorted ===============================
                     , bytestring
                     , bytestring-builder
                     , lens
                     , temporary
                     , directory
                     , filepath
                     , turtle
                     , unix
                     , diagrams
                     , fgl
                     , haxl
                     , binary
                     , network
                     , deepseq
                     , random
                     , pretty
                     , transformers
                     , mtl
                     , stm
                     , QuickCheck
                     , brick
                     , miso
                     , hackernews
                     , gl
                     , memory
                     , primitive
                     , transient
                     -- =========================================

  default-language:    Haskell2010
